--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     limitations under the License.
 -->
 <resources>
-    <string name="app_name">Weatherstation</string>
+    <string name="app_name">Cloud IoT Sensor Hub</string>
 </resources>
